# PE-Hackathon-Template-2026-Farmers

./: .coverage  .gitignore  Dockerfile  README.md  docker-compose.app.yml  docker-compose.yml  pyproject.toml  run.py
.github/workflows/: ci.yml
app/: __init__.py  database.py
app/models/: __init__.py  event.py  url.py  user.py
app/routes/: events.py  urls.py  users.py
app/utils/: cache.py  db_init.py  response.py  short_code.py  validators.py
docs/: MASTER.md  alerting_decision_log.md  api_decision_log.md  bitly-scalability-incident-case-study-2014.md  capacity_plan.md  chaos_reliability_decision.md  common_bugs.md  documentation-quest.md  error_handling.md  failure_modes.md  incident-response-quest.md  live-deployment-tests.md  observability_decision_log.md  reliability-quest.md  runbook.md  scalability-quest.md  schema_decision_log.md  testing_decision_log.md
load_tests/: baseline.js  baseline_results.json  scale_out.js  scale_out_results.json  tsunami.js  tsunami_results.json
monitoring/: alert_rules.yml  alertmanager.yml  prometheus.yml
monitoring/grafana/dashboards/: url-shortener.json
nginx/: nginx.conf
scripts/: heartbeat.sh  load_csv_data.py
tests/: conftest.py
tests/integration/: conftest.py  test_events.py  test_graceful_failures.py  test_health.py  test_urls.py  test_users.py
tests/unit/: test_short_code.py  test_validators.py
