[project]
name = "mlh-pe-hackathon"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "faker>=33.0",
    "flask>=3.1",
    "flask-cors>=6.0.2",
    "peewee>=3.17",
    "prometheus-flask-exporter>=0.23.2",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "python-json-logger>=4.1.0",
    "redis>=7.4.0",
    "validators>=0.35.0",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-flask>=1.3.0",
]

[tool.pytest.ini_options]
addopts = "--cov=app --cov-fail-under=50"
testpaths = ["tests"]
